(fix) fix sizing on mobile screens

--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -40,7 +40,7 @@
     background: var(--sun);
 }
 
-@media only screen and (max-width: 950px) {
+@media only screen and (max-width: 980px) {
     .Header .NavLink {
         margin: auto;
     }    
@@ -82,7 +82,7 @@
     color: var(--sun);
 }
 
-@media only screen and (max-width: 950px) {
+@media only screen and (max-width: 980px) {
     .NavButtonText {
         display: none;
     }    
