--- a/src/Pages/Game.css
+++ b/src/Pages/Game.css
@@ -6,10 +6,14 @@
     height: calc(80vh - 0rem);
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 980px) {
     .Game {
+        width: min(80%, 60rem);
+        justify-items: center;
+        align-items: center;
+        justify-content: center;
+
         all: initial;
-        position: fixed;
         z-index: 1000;
         inset: 0;
         display: grid;
@@ -25,17 +29,18 @@
     border-radius: 1rem;
     margin: 1rem 1rem 0 1rem;
     padding: .5rem;
-
     display: grid;
     grid-template-columns: 1fr max-content 1fr;
     gap: 1.5rem;
     align-items: center;
 }
 
-@media only screen and (max-width: 650px) {
+@media only screen and (max-width: 980px) {
     .Game__header {
         display: block;
         padding: 0;
+        margin: 0 auto;
+        width: 90%;
     }
 }
 
@@ -68,19 +73,22 @@
     margin: 0 0 0 1rem;
 }
 
+@media only screen and (max-width: 980px) {
+    .Game__PlayerName span {
+        margin: 0 0 0 0.25rem;
+    }
+}
+
 .Game__PlayerName a {
     color: inherit;
     text-decoration: none;
 }
 
-.Game__PlayerTier {
-    margin: 0 1rem 0 1rem;
-    display: grid;
-    grid-template-rows: min-content 1fr;
-    align-items: center;
-    justify-items: center;
-    justify-content: center;
-    align-content: center;
+@media only screen and (max-width: 980px) {
+    .Game__PlayerTier {
+        margin: 0.25rem;
+        text-align: center;
+    }
 }
 
 .Game__PlayerTier p {
@@ -98,6 +106,13 @@
     border-radius: 0.5rem;
     padding: 0.5rem;
 }
+
+@media only screen and (max-width: 980px) {
+    .Game__PlayerRating {
+        margin: 0.25rem;
+    }
+}
+
 
 .Game__PlayerRating span .up,
 .Game__PlayerRating span .down,
@@ -140,7 +155,7 @@
     color: var(--white-87);
 }
 
-@media only screen and (max-width: 650px) {
+@media only screen and (max-width: 980px) {
     .Game__Actions {
         grid-column: 1/-1;
         display: flex;
